--- a/backend/Processor/Processor.csproj
+++ b/backend/Processor/Processor.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <LangVersion>12</LangVersion>
     </PropertyGroup>
 
 
@@ -16,7 +17,7 @@
     <ItemGroup>
       <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.0" />
       <PackageReference Include="MediatR" Version="12.1.1" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-rc.1.23419.6"/>
     </ItemGroup>
 
 
