--- a/backend/Infrastructure/Infrastructure.csproj
+++ b/backend/Infrastructure/Infrastructure.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="FluentValidation" Version="11.7.1"/>
+        <PackageReference Include="MediatR.Contracts" Version="2.0.1"/>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0-rc.1.23419.4"/>
         <PackageReference Include="SendGrid" Version="9.28.1"/>
         <PackageReference Include="Twilio" Version="7.0.0-rc.1"/>
@@ -16,10 +17,6 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Domain\Domain.csproj"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <Folder Include="Responses\Processor\"/>
     </ItemGroup>
 
 </Project>
