--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -22,7 +22,8 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 8.0.x
+          dotnet-version: 8
+          dotnet-quality: "preview"
   front-api-service:
     runs-on: ubuntu-latest
     name: Front Api Validation & Build
