--- a/backend/Services/Backend/Backend.csproj
+++ b/backend/Services/Backend/Backend.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <LangVersion>12</LangVersion>
+        <RootNamespace>Backend</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
